v - 14 resume alignment fixed

--- a/src/Component/Resume/Resume.css
+++ b/src/Component/Resume/Resume.css
@@ -115,6 +115,10 @@
     .Resume .d_flex{
         flex-direction: column;
     }
+    .Resume .left{
+        position: relative;
+        left: 5%;
+    }
     .Resume .left::after{
         top: 17%;
         height: 70vh;
